# biocpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.html  README.md
Data/: .gitignore  (+2 more)
examples/: .gitignore  CMakeCache.txt  CMakeLists.txt  C_alpha_variance.cpp  Makefile  ZIMM1.h  align2  alpha_exposed.cpp  alpha_variance.cpp  anisotropic_network_model.cpp  cmake_install.cmake  contact_map.cpp  contact_map_graph.py  container.cpp  dpss  dpss.cpp  fasta_align.cpp  fuzzy_contact_map  fuzzy_contact_map.cpp  gaussian_network_model.cpp  has_coordinate  has_coordinate.cpp  ids.cpp  iterate.cpp  lcpo_exposed  lcpo_exposed.cpp  map  md_gas_of_identical_particles.cpp  mutations.cpp  pam.test  pdb.cpp  print_atom_coordinate.cpp  restyle.cpp  subst_matrix_code_generator.py  surface_area  surface_area.cpp  test  test.cpp  zimm_align.cpp
examples/cgal/: .gitignore  CMakeLists.txt  alpha_shapes.cpp  kernel.cpp  protein_surface.cpp  triang3_boost_zip.cpp
examples/cgal_support/: CMakeCache.txt  CMakeLists.txt  Makefile  alpha_exposed.cpp  cmake_install.cmake  delaunay_exposed.cpp
examples/complex_constructor/: CMakeLists.txt  complex_constructor.cpp
examples/complex_iterator/: CMakeLists.txt  complex_iterator.cpp
examples/contact_map/: CMakeLists.txt  contact_map.cpp
examples/container/: CMakeLists.txt  container.cpp
examples/container_iterator/: CMakeLists.txt  container_iterator.cpp
examples/dictionary/: CMakeLists.txt  example.cfg
examples/exposed_atoms_alphashape/: CMakeLists.txt  exposed_atoms_alphashape.cpp
examples/exposed_atoms_delaunay/: CMakeLists.txt  exposed_atoms_delaunay.cpp
examples/exposed_atoms_lcpo/: CMakeLists.txt  exposed_atoms_lcpo.cpp
examples/fasta_alignment_blosum62/: CMakeLists.txt  fasta_alignment_blosum62.cpp
examples/fasta_alignment_strict/: CMakeLists.txt  fasta_alignment_strict.cpp
examples/has_coordinate/: CMakeLists.txt  has_coordinate.cpp
examples/ids/: CMakeLists.txt  ids.cpp
examples/md_test/: CMakeLists.txt
examples/network_model_anisotropic/: CMakeLists.txt  network_model_anisotropic.cpp
examples/network_model_gaussian/: CMakeLists.txt  network_model_gaussian.cpp
examples/pdb/: CMakeLists.txt
examples/pdb_merge/: CMakeLists.txt  pdb_merge.cpp
examples/pdb_print/: CMakeLists.txt  pdb_print.cpp
examples/pdb_print_custom_dictionary/: CMakeLists.txt  atoms.ccd  elements.ccd  pdb_print_custom_dictionary.cpp  residues.ccd
examples/pdb_read/: CMakeLists.txt  pdb_read.cpp
examples/protein_Calpha_variance/: CMakeLists.txt  protein_Calpha_variance.cpp
examples/protein_dpss/: CMakeLists.txt  protein_dpss.cpp
examples/protein_mutation/: CMakeLists.txt  protein_mutation.cpp
examples/python2/: subst_matrix_code_generator.py
examples/statistics_backbone_reconstruction_parameters/: CMakeLists.txt  statistics_backbone_reconstruction_parameters.cpp
examples/statistics_o_position/: CMakeLists.txt  statistics_o_position.cpp
examples/substitution_matrix_csv/: blosum45.csv  blosum62.csv  blosum80.csv  zimm1.csv
examples/surface_area_lcpo/: CMakeLists.txt  surface_area_lcpo.cpp
examples/topology_constructor/: CMakeLists.txt  topology_constructor.cpp
examples/topology_isomorphism/: CMakeLists.txt  moieties.ccd  topology_isomorphism.cpp
examples/topology_visitor/: CMakeLists.txt  topology_visitor.cpp
src/BioCpp/: CMakeLists.txt  Core  Standard  standard.h  version.h
src/BioCpp/TODO/molecular-dynamics/: integrator.h  thermostat.h
src/BioCpp/base_atom/: TODO  base_atom.h  base_atom.hpp  has_coordinate.hxx
src/BioCpp/base_contact_map/: base_contact_map.h  base_contact_map.hxx  binary_contact_map.h  fuzzy_contact_map.h
src/BioCpp/base_container/: Iterate_pair.hxx  Iterate_single.hxx  base_container.h  base_container.hxx  is_container_of.hxx
src/BioCpp/chemical_component_dictionary/: CMakeLists.txt  definition.hpp  dictionary.hxx
src/BioCpp/chemical_component_dictionary/atoms/: atom_dictionary.cpp  atom_dictionary.hpp
src/BioCpp/chemical_component_dictionary/elements/: element_dictionary.cpp  element_dictionary.hpp
src/BioCpp/chemical_component_dictionary/residues/: residue_dictionary.cpp  residue_dictionary.hpp
src/BioCpp/fasta/: BLOSUM45.h  BLOSUM62.h  BLOSUM80.h  CMakeLists.txt  NeedlemanWunsch.cpp  NeedlemanWunsch.h  NeedlemanWunsch.hpp  StrictNeedlemanWunsch.cpp  StrictNeedlemanWunsch.h  StrictNeedlemanWunsch.hpp  substitution_matrix.h  substitution_matrix.hpp
src/BioCpp/geometry/: rotation.hpp  traslation.hpp
src/BioCpp/io_files/: base_file_reader.hpp  file_reader_init_flags.hpp
src/BioCpp/io_files/model/: model.hxx
src/BioCpp/io_files/seqres/: seqres_record.hpp
src/BioCpp/molecular-dynamics/: configuration.h  dynamics.h  phase_space.h  potential.h
src/BioCpp/molecular-dynamics/integrators/: integrator.h  verlet.h
src/BioCpp/molecular-dynamics/potentials/: LennardJones.h
src/BioCpp/monte_carlo/: mc_dynamics.hpp  mc_pivot.hpp  mc_rotation.hpp  mc_traslation.hpp  metropolis_t.hpp  move_parameter_t.hpp  move_t.hpp  pivot.h
src/BioCpp/morphology/: cgal_extensible_kernel.h  cgal_extensible_kernel.hpp  surface_area_lcpo.h  surface_area_lcpo.hxx  two_sphere_buried_surface_area.hpp
src/BioCpp/morphology/cgal_alpha_shape_3/: alpha_vertices.h  alpha_vertices.hxx
src/BioCpp/morphology/cgal_delaunay_3/: delaunay_vertices.h  delaunay_vertices.hxx
src/BioCpp/morphology/cgal_extensible_kernel/: bbox.h  bbox.hxx  coord_iterator.h  coord_iterator.hxx  kernel.h  kernel.hxx  point.h  point.hxx  point_constructor.h  (+1 more)
src/BioCpp/pdb/: model.h  pdb.h  pdb_ATOM_format.h  pdb_MODEL_format.h  pdb_SEQRES_format.h  pdb_sections_and_records.h
src/BioCpp/polimers/: atom_id.h  moiety_id.h
src/BioCpp/proteins/: CMakeLists.txt  base_complex_constructor.hxx
src/BioCpp/rng/: rng.hpp
src/BioCpp/standard/: CMakeLists.txt  chain.h  complex.h  complex_constructor.h  model.h  residue.h
src/BioCpp/topology/: base_neighborood_map.h  topology.h  topology.hxx  topology_constructor.hxx
src/BioCpp/utils/: CMakeLists.txt  TODO  angle_conversion.h  errors_and_warnings.h  has_coordinate.h  print_atom.hpp  sgn.h
(+839 files in other folders)
