set( Boost_LIBRARIES ${Boost_LIBRARIES} PARENT_SCOPE )
set( CGAL_LIBRARIES ${CGAL_LIBRARIES} PARENT_SCOPE )

project( exposed_atoms_delaunay )
set_property(
  SOURCE ${PROJECT_NAME}.cpp
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_PDB
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_STANDARD
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_CGAL
)
add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${CGAL_LIBRARIES})
