
project( exposed_atoms_lcpo )
set_property(
  SOURCE ${PROJECT_NAME}.cpp
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_PDB
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_STANDARD
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_MORPHOLOGY
  PROPERTY COMPILE_DEFINITIONS BIOCPP_DONT_INCLUDE_CGAL
)
add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
target_link_libraries(${PROJECT_NAME} pdb)
