
project( fasta_alignment_strict )
set_property(
  SOURCE ${PROJECT_NAME}.cpp
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_FASTA_ALIGNMENT
  PROPERTY COMPILE_DEFINITIONS BIOCPP_INCLUDE_FASTA_SUBST_MATRIX_ZIMM1 
)
add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
target_link_libraries(${PROJECT_NAME} utils)
